<resources>
    <string name="app_name">Application to Speak</string>;
    <string name="action_settings">Settings</string>;
    <string name="home_principal_textView">Welcome on this application. \nClick to begin experience.</string>;
    <string name="home_stats_textView">Number of plays : </string>;
    <string name="home_reset_button">Reset</string>;

    //Play- Pause - Stop
    <string name="home_play_button">Play</string>;
    <string name="home_pause_button">Pause </string>;
    <string name="home_stop_button">Stop </string>
    <string name="android.support.design.widget.FloatingActionButton">floatingPlay </string>

</resources>
