<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/home_principal_textView"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_principal_textView"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/home_number_textView"
        android:layout_width="61dp"
        android:layout_height="18dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="..."
        app:layout_constraintBottom_toTopOf="@+id/home_reset_button"
        app:layout_constraintStart_toEndOf="@+id/home_shownumber_textView" />

    <TextView
        android:id="@+id/home_shownumber_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/home_stats_textView"
        app:layout_constraintBottom_toTopOf="@+id/home_reset_button"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/home_reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/home_reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/home_pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/home_pause_button"
        app:layout_constraintStart_toEndOf="@+id/home_play_button"
        app:layout_constraintTop_toBottomOf="@+id/home_principal_textView" />

    <Button
        android:id="@+id/home_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/home_stop_button"
        app:layout_constraintStart_toEndOf="@+id/home_pause_button"
        app:layout_constraintTop_toBottomOf="@+id/home_principal_textView" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="225dp"
        android:layout_height="39dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_pause_button" />

    <Button
        android:id="@+id/home_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/home_play_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_principal_textView" />

    <TextView
        android:id="@+id/home_state_vocal"
        android:layout_width="159dp"
        android:layout_height="125dp"
        android:layout_marginBottom="8dp"
        android:text="STATES"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>